# triton

./: .gitignore  LICENSE  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
.streamlit/: config.toml
docs/: gui.md  index.md  install.md  quickstart.md
docs/api/: core.conversion.md  core.io.md  core.mixer.md  core.pipeline_matrix.md  core.pipeline_runtime.md  core.project.md  core.ramp.md  core.signal.md  core.spectrogram.md  degrade.noise_generator.md  degrade.noise_mixer.md  degrade.vocoder.md  ingest.rss.md  transcribe.whisper.md
docs/assets/: brandkit.css
docs/cli/: babble.md  convert.md  degrade.md  files.md  ingest.md  matrix.md  mix.md  normalize.md  transcribe.md
src/triton/: app.py
src/triton/classify/: __init__.py  ast.py
src/triton/cli/: babble.py  convert.py  degrade.py  files.py  ingest.py  main.py  matrix.py  normalize.py  transcribe.py
src/triton/core/: __init__.py  conversion.py  io.py  mixer.py  pipeline_matrix.py  pipeline_runtime.py  project.py  ramp.py  signal.py  spectrogram.py
src/triton/degrade/: __init__.py  noise_generator.py  noise_mixer.py  speech_noise.py  time_compression.py  vocoder.py
src/triton/gui/: __init__.py  app.py  project_views.py  shared.py  styles.py
src/triton/gui/assets/: app.css
src/triton/gui/tabs/: __init__.py  classify.py  file_library.py  pipelines.py  rss.py
src/triton/ingest/: __init__.py  base.py  rss.py
src/triton/transcribe/: __init__.py  whisper.py
tests/: test_core_babble.py  test_core_io_sidecar.py  test_core_pipeline_matrix.py  test_core_project_log.py  test_core_project_pipelines.py  test_core_project_spectrogram.py  test_core_spectrogram.py  test_degrade_noise_generator.py  test_degrade_speech_noise.py  test_gui_pipeline_outputs.py  test_ingest_rss.py  test_ingest_rss_integration.py
